frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html,
  body,
  #root {
    height: 100%;
  }
  body {
    @apply bg-brand-surface-100 text-gray-900 font-ui;
  }
  h1,
  h2,
  h3 {
    @apply tracking-tight;
  }
  :focus-visible {
    @apply outline-none ring-4 ring-brand-secondary/30;
  }
}

